--- a/style.css
+++ b/style.css
@@ -18,35 +18,37 @@
 .content {
     max-width: 600px;
     margin: 60px auto;
-    padding: 20px;
-    text-align: center;
+    margin-bottom: 30px;
+    padding: 25px;
     box-shadow: 0px 7px 29px 0px rgba(100, 100, 111, 0.2);
     background-color: rgba(255, 255, 255, 0.3);
     backdrop-filter: blur(8px);
     -webkit-backdrop-filter: blur(8px);
+    border-radius: 6px;
 }
 
 select {
     display: block;
     width: 100%;
-    border-radius: 4px;
+    border-radius: 7px;
     padding: 10px;
     font-size: 18px;
 }
 
 .city {
     display: flex;
-    margin: 10px 0;
+    margin: 10px;
     justify-content: space-between;
     border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
 }
 
-.city :last-child {
+.city:last-child {
     border: none;
 }
 
 .date {
     opacity: 0.7;
+    margin-bottom: 15px;
 }
 
 .time {
