--- a/style.css
+++ b/style.css
@@ -78,3 +78,16 @@ footer {
     font-size: 18px;
     color: rgba(0, 0, 0, 0.8);
 }
+
+a {
+    text-decoration: none;
+    font-size: 19px;
+    font-weight: bold;
+    color: #000;
+    padding-left: 5px;
+    transition: all 200ms;
+}
+
+a:hover {
+    color:rgb(48, 97, 202);
+}
