--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ select {
 
 .city {
     display: flex;
-    margin: 10px;
+    margin: 20px 20px 10px 20px;
     justify-content: space-between;
     border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
 }
@@ -48,7 +48,7 @@ select {
 
 .date {
     opacity: 0.7;
-    margin-bottom: 15px;
+    margin-bottom: 25px;
 }
 
 .time {
@@ -58,7 +58,7 @@ select {
 
 .time small {
     font-size: 24px;
-    line-height: 36px;
+    line-height: 40px;
     vertical-align: middle;
 }
 
@@ -70,7 +70,7 @@ h1 {
 
 h2 {
     margin: 0 0 5px;
-    font-size: 28px;
+    font-size: 32px;
 }
 
 footer {
